Use new selected Option code for interactions